feat: backend community posts and comments
